docs: add asciidoc README